objects/APTS_Location_PriceList_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Factory__c</fullName>
        <label>Factory</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Location PriceList Mapping</relationshipLabel>
        <relationshipName>Location_PriceList_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Location PriceList Mapping</relationshipLabel>
        <relationshipName>Location_PriceList_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Price_List_currency__c</fullName>
        <formula>Text(APTS_Price_List__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price List currency</label>
        <type>Text</type>
    </fields>
    <label>Location PriceList Mapping</label>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>Location PriceList Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location PriceList Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>